fix(rating-star): right spacing

--- a/src/components/basics/RatingStar/rating-star.styles.scss
+++ b/src/components/basics/RatingStar/rating-star.styles.scss
@@ -10,7 +10,7 @@
     }
   }
   &__label {
-    margin-right: $spacing-lg;
+    margin-right: $spacing-sm;
   }
   &__icon {
     cursor: pointer;
